--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "API",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development && npm run init",
-    "dev": "$(npm bin)/nodemon --exec npm run init",
-    "init": "$(npm bin)/babel-node app.js",
+    "start": "NODE_ENV=production npm run init",
+    "dev": "NODE_ENV=development $(npm bin)/nodemon --exec npm run init",
+    "init": "$(npm bin)/babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Igor Luiz Halfeld <hello@igorluiz.me>",
@@ -17,6 +17,7 @@
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "meteor-random": "0.0.3",
     "mongoose": "^4.13.1"
