--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "meteor-random": "0.0.3",
-    "mongoose": "^4.13.1"
+    "mongoose": "^4.13.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
