--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Igor Luiz Halfeld <hello@igorluiz.me>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.153.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -23,6 +24,7 @@
     "jwt-simple": "^0.5.1",
     "meteor-random": "0.0.3",
     "mongoose": "^4.13.1",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1"
   },
