--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^4.13.1",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
